--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "buffer": "^5.0.7",
     "expo": "^19.0.0",
     "moment": "^2.18.1",
+    "moment-duration-format": "^1.3.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1",
     "react-native-uuid": "^1.4.9",
