--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1",
     "react-native-uuid": "^1.4.9",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-navigation": "^1.0.0-beta.11",
+    "react-redux": "^5.0.6",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   }
 }
