--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "buffer": "^5.0.7",
     "expo": "^19.0.0",
+    "ionicons": "^3.0.0",
     "moment": "^2.18.1",
     "moment-duration-format": "^1.3.0",
     "react": "16.0.0-alpha.12",
